--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,12 +1,37 @@
 :root{
     --main-color: #463581;
     --secondary-color: #f92211;
+    --third-color: #612de3;
+    --font-color: #002060;
 }
 .primary-color{
     color: var(--main-color);
 }
 .secondary-color{
     color: var(--secondary-color);
+}
+.third-color{
+    color: var(--third-color);
+}
+.font-color{
+    color: var(--font-color);
+}
+
+.imagen-icono{
+    width: 100px;
+}
+
+
+/* ================================================= */
+/* ------------------HOME---------------------------- */
+/* ================================================= */
+
+
+/* ========nav============= */
+.saludo{
+    background-color: #ffc000;
+    margin: 0;
+    padding-left: 16px;
 }
 
 
@@ -16,15 +41,21 @@
     height: 400px;
     object-fit: cover;
 }
-.carousel-item{
-    position: relative;
-}
-.nombre-prod{
+.nombre-ctg{
     color: white;
     text-align: center;
 }
 .carousel-container{
     background-color: var(--main-color);
+}
+.categoria-show{
+    position: relative;
+    width: 100%;
+}
+.btn-participa{
+    position: absolute;
+    bottom: 0;
+    z-index: 1000;
 }
 
 /* ==========iconos links=========== */
@@ -41,11 +72,63 @@
     font-size: 1.5rem;
 }
 
-/* ======formulario========== */
+/* ======formulario publicidad========== */
 .form-publicidad{
     background-color: var(--main-color);
 }
 .form-publicidad p{
     color: white;
     font-size: 1.5rem;
+}
+.mensaje{
+    background-color: var(--third-color);
+}
+
+
+
+/* ================================================= */
+/* ------------------products-show------------------ */
+/* ================================================= */
+
+.borde{
+    border: 1px solid var(--third-color);
+    padding: 1.5rem;
+}
+.nombre-prod{
+    background-color: var(--third-color);
+    color: white;
+}
+.tamano-letra{
+    font-size: 1.3rem;
+}
+
+/* ==========barra objetivo================= */
+#label {
+    text-align: center;
+    line-height: 30px;
+    color: black;
+}
+#myProgress {
+    position: relative;
+    width: 100%;
+    height: 30px;
+    background-color: grey;
+}
+#myBar {
+    position: absolute;
+    height: 100%;
+    background-color: #ffcb05;
+}
+
+
+
+/* ================================================= */
+/* ------------------carrito------------------------ */
+/* ================================================= */
+.linea{
+    border: 2px solid;
+    margin-top: 0;
+}
+.borde-input{
+    border: solid 1px var(--third-color);
 }
