inicio de implementacio de autenticacion, icono ayuda

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -20,6 +20,12 @@
 .imagen-icono{
     width: 100px;
 }
+.icono-ayuda{
+    position: fixed;
+    bottom: 1rem;
+    right: 0.5rem;
+    width: 90px;
+}
 
 
 /* ================================================= */
