--- a/public/css/home.css
+++ b/public/css/home.css
@@ -189,7 +189,8 @@ body{
 /* ------------------metodo pago-------------------- */
 /* ================================================= */
 .logo-metodo-pago{
-    width: 80px;
+    width: 2rem;
+    object-fit: cover;
 }
 
 /* ================================================= */
